--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: nightly
 on: [push, pull_request]
 
 env:
-  BINARY_PREFIX: "zbp_beta_nightly"
+  BINARY_PREFIX: "zbp_beta_nightly_"
   BINARY_SUFFIX: ""
   PR_PROMPT: "::warning:: Build artifact will not be uploaded due to the workflow is trigged by pull request."
   LD_FLAGS: "-w -s"
@@ -16,12 +16,7 @@ jobs:
       matrix:
         # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/amd64, darwin/arm64
         goos: [linux, windows]
-        goarch: ["386", amd64, arm, arm64]
-        exclude:
-          - goos: windows
-            goarch: arm
-          - goos: windows
-            goarch: arm64
+        goarch: [amd64, arm64]
       fail-fast: true
     steps:
       - uses: actions/checkout@master
